[gd_scene load_steps=2 format=3 uid="uid://og50mlvkyoml"]

[ext_resource type="Script" path="res://Assets/Scripts/druid_menu.gd" id="1_yk1t5"]

[node name="DruidMenu" type="Node2D"]
script = ExtResource("1_yk1t5")

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.588235)
offset_left = 69.0
offset_top = 43.0
offset_right = 554.0
offset_bottom = 297.0
color = Color(0.428237, 0.204973, 0.0406361, 1)

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 60.0
offset_top = 40.0
offset_right = 125.0
offset_bottom = 105.0

[node name="Button2" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.5
offset_top = 40.0
offset_right = 32.5
offset_bottom = 105.0
grow_horizontal = 2

[node name="Button3" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 117.5
offset_top = 40.0
offset_right = 182.5
offset_bottom = 105.0
grow_horizontal = 2

[node name="Button4" type="Button" parent="ColorRect"]
offset_left = 60.0
offset_top = 140.0
offset_right = 125.0
offset_bottom = 205.0

[node name="Button5" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.5
offset_top = 140.0
offset_right = 32.5
offset_bottom = 205.0
grow_horizontal = 2

[node name="Button6" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 117.5
offset_top = 140.0
offset_right = 182.5
offset_bottom = 205.0
grow_horizontal = 2

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ColorRect/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="ColorRect/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="ColorRect/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="ColorRect/Button6" to="." method="_on_button_6_pressed"]
